--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -76,10 +76,4 @@
   z-index: 2;
 }
 
-.hero-parallax-spacer {
-  height: 60vh;
-  width: 100%;
-  pointer-events: none;
-}
-
 // Removed @keyframes 
